# suprb-experimentation

./: .gitignore  README.md  adeles.py  requirements.txt  setup.cfg
evaluation/: __init__.py  figures.py  tables.py  utils.py
experiment/: __init__.py  base.py  evaluation.py
experiments/: base.py  evaluation.py  mlflow.py
logging_output_scripts/: GHE.csv  HE.csv  HE2.csv  OBR.csv  calc_bay.py  config.json  config_class.json  config_mixing.json  config_rd.json  config_regression.json  config_sc.json  latex_rule.py  latex_tabulars.py  make_plots.py  mlflow_utils.py  multiple_runs.py  one_time_run.py  overtime.py  plot.py  plot_violin.py  profiling_function_summary.py  run_all_scripts.py  stat_analysis.py  summary_csv.py  test.py  testplot.py  utils.py  violin_and_swarm_plots.py  violin_plots.py
problems/: __init__.py  base.py
runs/: cv.py  minimal.py  nested.py  optimizers.py  optimizers_optuna.py  optimizers_skopt.py  rf.py  tuning.py
scripts/: calc_bay.py  latex_tabulars.py  summary_csv.py  violin_plots.py
slurm/: ASN.sbatch  CCPP.sbatch  CS.sbatch  EEC.sbatch  GE_CCPP.sbatch  GE_EEC.sbatch  all_tuning.sbatch  all_tuning_multiple.sh  baycomp.sbatch  class_tuning.sbatch  class_tuning_elasticnet.sbatch  class_tuning_l1.sbatch  class_tuning_l1_abalone.sbatch  class_tuning_l2.sbatch  default.nix  default.sbatch  default_json.sbatch  default_licca.sbatch  default_oc_server.sbatch  default_oc_setup.sbatch  ga_comparison_tuning_asn.sbatch  ga_comparison_tuning_ccpp.sbatch  ga_comparison_tuning_cs.sbatch  ga_comparison_tuning_pppts.sbatch  ghe_tuning.sbatch  (+39 more)
(+197 files in other folders)
