[metadata]
name = suprb-experimentation
version = 0.1.0
author = Michael Heider, Jonathan Wurth, Roman-Alexander Sraj, David Pätzel
author_email = michael.heider@uni-a.de
description = Experimentation Setups for the Supervised Rule-based Learning
System (SupRB)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/heidmic/suprb-experimentation
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
include_package_data = True
install_requires =
    numpy >= 1.20.0
    scipy >= 1.7.0
    scikit-learn >= 1.0.0
